--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,19 @@ python:
   - "2.7"
 script:
   - pytest
+# env: {}
+# deploy:
+  # provider: releases
+  # api_key:
+    # secure: {enter a key}
+  # file:
+    # - .git/
+    # - .gitignore
+    # - .travis.yaml
+    # - resources/lib/tests/.pytest_cache/
+    # - resources/lib/tests/_testdata.py
+  # file_glob: true
+  # on:
+    # repo: tommistolercz/plugin.video.vk
+    # tags: true
+  # skip_cleanup: true
