--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
   - 2.7
 before_install:
-  - python --version
-  - pip install -U pip
   - pip install -U pytest
+install:
+  - pip install -r requirements.txt
 before_script:
   - export PYTHONPATH=$PYTHONPATH:$(pwd):$(pwd)/resources/lib:$(pwd)/resources/lib/tests
 script:
