--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-kodistubs>=17.6.0
-pprintpp>=0.4.0
-requests>=2.8.1
-tinydb>=3.12.2
-vk>=2.0.2
+mock
+pytest
+pprintpp
+requests
+
+kodistubs >= 17.6.0
