--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ before_deploy:
   - cp -r addon.xml CHANGELOG.md LICENSE.md README.md resources $DISTPATH
   - rm -r $DISTPATH/resources/lib/tests
   - zip $DISTPATH/plugin.video.vk-$TRAVIS_TAG.zip -r $DISTPATH
-  - git config --local user.name "Tom Mistoler"
-  - git config --local user.email "tommistolercz@icloud.com"
+  - git config --local user.name "Tomas Mistoler"
+  - git config --local user.email "tomas.mistoler@gmail.com"
   - git tag $TRAVIS_TAG
 deploy:
   on:
